config/kubernetes-helpers/snapshot/app-stateful.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresdb
spec:
  selector:
    matchLabels:
      app: postgresdb
  replicas: 1
  serviceName: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgresdb
          image: postgres:14.0-alpine
          volumeMounts:
            - name: postgresdb-disk
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: postgresdb-disk
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
